[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/brush.gd" type="Script" id=2]
[ext_resource path="res://assets/save.png" type="Texture" id=3]
[ext_resource path="res://assets/trash.png" type="Texture" id=4]
[ext_resource path="res://scripts/tools.gd" type="Script" id=5]
[ext_resource path="res://assets/minus.png" type="Texture" id=6]
[ext_resource path="res://assets/plus.png" type="Texture" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1140, 720 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="brush" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1140, 720 )
rect_clip_content = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tools" type="Control" parent="."]
anchor_bottom = 1.0
rect_min_size = Vector2( 140, 720 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="tools"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0001
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnSave" type="Control" parent="tools/VBoxContainer"]
margin_right = 140.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )

[node name="touch" type="TouchScreenButton" parent="tools/VBoxContainer/btnSave"]
position = Vector2( 15, 15 )
scale = Vector2( 0.546428, 0.546428 )
normal = ExtResource( 3 )

[node name="btnTrash" type="Control" parent="tools/VBoxContainer"]
margin_top = 144.0
margin_right = 140.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 140 )

[node name="touch" type="TouchScreenButton" parent="tools/VBoxContainer/btnTrash"]
position = Vector2( 15, 15 )
scale = Vector2( 0.546428, 0.546428 )
normal = ExtResource( 4 )

[node name="btnBrushPlus" type="Control" parent="tools/VBoxContainer"]
margin_top = 288.0
margin_right = 140.0
margin_bottom = 428.0
rect_min_size = Vector2( 0, 140 )

[node name="touch" type="TouchScreenButton" parent="tools/VBoxContainer/btnBrushPlus"]
position = Vector2( 15, 15 )
scale = Vector2( 0.546428, 0.546428 )
normal = ExtResource( 7 )

[node name="btnBrushMinus" type="Control" parent="tools/VBoxContainer"]
margin_top = 432.0
margin_right = 140.0
margin_bottom = 572.0
rect_min_size = Vector2( 0, 140 )

[node name="touch" type="TouchScreenButton" parent="tools/VBoxContainer/btnBrushMinus"]
position = Vector2( 15, 15 )
scale = Vector2( 0.546428, 0.546428 )
normal = ExtResource( 6 )

[node name="icon" type="TextureRect" parent="tools"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -140.0
margin_right = 140.0
rect_pivot_offset = Vector2( 450.515, 330.439 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="brush" to="brush" method="_on_brush_mouse_entered"]
[connection signal="mouse_exited" from="brush" to="brush" method="_on_brush_mouse_exited"]
